<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btSoma"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/btSoma"
        app:layout_constraintEnd_toStartOf="@+id/btRes"
        app:layout_constraintTop_toBottomOf="@+id/btSub" />

    <Button
        android:id="@+id/bt0"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/bt0"
        app:layout_constraintEnd_toStartOf="@+id/btPonto"
        app:layout_constraintTop_toBottomOf="@+id/bt1" />

    <Button
        android:id="@+id/btSub"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/btSub"
        app:layout_constraintEnd_toStartOf="@+id/btRes"
        app:layout_constraintTop_toBottomOf="@+id/btMult" />

    <Button
        android:id="@+id/btMult"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/btMult"
        app:layout_constraintEnd_toStartOf="@+id/btClear"
        app:layout_constraintTop_toBottomOf="@+id/btDiv" />

    <Button
        android:id="@+id/btDiv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/btDiv"
        app:layout_constraintEnd_toStartOf="@+id/btBack"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/bt5"
        app:layout_constraintEnd_toStartOf="@+id/bt6"
        app:layout_constraintTop_toBottomOf="@+id/bt8" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/bt7"
        app:layout_constraintEnd_toStartOf="@+id/bt8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/bt1"
        app:layout_constraintEnd_toStartOf="@+id/bt2"
        app:layout_constraintTop_toBottomOf="@+id/bt4" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/bt9"
        app:layout_constraintEnd_toStartOf="@+id/btDiv"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/bt3"
        app:layout_constraintEnd_toStartOf="@+id/btSub"
        app:layout_constraintTop_toBottomOf="@+id/bt6" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/bt6"
        app:layout_constraintEnd_toStartOf="@+id/btMult"
        app:layout_constraintTop_toBottomOf="@+id/bt9" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/bt2"
        app:layout_constraintEnd_toStartOf="@+id/bt3"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/bt8"
        app:layout_constraintEnd_toStartOf="@+id/bt9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/bt4"
        app:layout_constraintEnd_toStartOf="@+id/bt5"
        app:layout_constraintTop_toBottomOf="@+id/bt7" />

    <Button
        android:id="@+id/btPonto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/btPonto"
        app:layout_constraintEnd_toStartOf="@+id/btSoma"
        app:layout_constraintTop_toBottomOf="@+id/bt3" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/btBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btRes"
        android:layout_width="50dp"
        android:layout_height="112dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/btRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btClear" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/btClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBack" />

    <TextView
        android:id="@+id/visor"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:background="#D8D8D8"
        android:shadowColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>